[package]
name = "macropad-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-macropad = "0.6.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-traits"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-pac", "unstable-traits", "time-driver"] }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
panic-halt = "0.2.0"
rand = { version = "0.8.5", default-features = false }
rp2040-hal = "0.8.0"
# sh1106 = "0.4.0"
sh1106 = { path = "sh1106" }
smart-leds = "0.3.0"
ws2812-pio-embassy = { path = "ws2812-pio-embassy" }
# defmt = "0.3.4"
