[package]
name = "macropad-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]} # the feature prevents linker errors
cortex-m-rt = "0.7.3"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-traits"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-pac", "unstable-traits", "time-driver"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
# rp2040-hal = "0.8.0"
# sh1106 = "0.4.0"
sh1106 = { path = "sh1106" }
smart-leds = "0.3.0"
ws2812-pio-embassy = { path = "ws2812-pio-embassy" }
chip8 = { path = "chip8-rs/chip8" }
pio-proc = "0.2.2"
pio = "0.2.1"
fixed = "1.23.1"
itoa = "1.0.9"
# defmt = "0.3.4"
